<resources>
    <string name="app_name">a621</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="requestUserAgent">Dalvik Android/XML/a621 0.4b (reBane)</string>

    <string name="post_search_hint">Enter up to 6 Tags</string>

    <string name="pagination_next">Next »</string>
    <string name="pagination_previous">« Last</string>

    <string name="title_posts">Posts</string>
    <string name="title_settings">Settings</string>
    <string name="title_folder_chooser">Choose Folder</string>
    <string name="title_forums">Forums</string>

    <string name="settings_defaultsearch">Default Search</string>
    <string name="settings_blacklist">Blacklist</string>
    <string name="settings_blacklist_desc">Each line represents one group of blacklisted tags. If a post contains all tags of one blacklist group, it will be hidden.</string>
    <string name="settings_baseurl">Base URL</string>
    <string name="settings_baseurl_desc">Please only change if you know what you\'re doing! Used to change the web source for this App, default https://e621.net/</string>
    <string name="settings_postsperpage">Posts per page</string>
    <string name="settings_postsperpage_desc">The ammount of posts to fetch at once. Setting this too high might cause the app to force close due to memory overflow. Range from 1 to 100.</string>
    <string name="settings_previewquality">Preview Quality</string>
    <string name="settings_savetrafic">Trafic Optimization</string>
    <string name="settings_backgroundservice">Background Services</string>
    <string name="settings_savefolder">Default Save Location</string>
    <string name="settings_savefolderdesc">The default location to save files at. The folder chooser still openes when clicking the save icon, though you can just hit \'Use Folder\'</string>
    <string name="settings_launchactivity">Launching Activity</string>
    <string-array name="settings_launchactivityvals">
        <item>Posts</item>
        <item>Forums</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
